--- a/page-Beer.html
+++ b/page-Beer.html
@@ -3,7 +3,7 @@
 <html lang="ru">
 
 <head>
-<title>Новый поворот</title>
+<title>Пиво | Новый поворот</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 <meta name="keywords" content="Grand Tour Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -32,72 +32,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 	<!-- //google fonts -->
-	<style>
-           .txt-alg-jf {
-              text-align: justify;
-              text-indent: 1.5em;
-           }
-
-           .page-booking-btn>button>a {
-               color: blue;
-           }
-           .page-booking-btn>button>a:hover,
-           .page-booking-btn>button>a:active,
-           .page-booking-btn>button>a:focus {
-               color: white;
-           }
-
-           h3.title {
-              font-size: 61px;
-           }
-           @media(max-width:1080px){
-                h3.title {
-                    font-size: 58px;
-                }
-           }
-           @media(max-width:900px){
-                h3.title {
-                    font-size: 52px;
-                }
-           }
-           @media(max-width:768px){
-                h3.title {
-                    font-size: 48px;
-                }
-           }
-           @media(max-width:667px){
-                h3.title {
-                    font-size: 44px;
-                }
-           }
-           @media(max-width:600px){
-                h3.title {
-                    font-size: 40px;
-                }
-           }
-           @media(max-width:568px){
-                h3.title {
-                    font-size: 30px;
-                    letter-spacing: 2px;
-                }
-           }
-           @media(max-width:440px){
-                h3.title {
-                    font-size: 25px;
-                }
-           }
-           @media(max-width:375px){
-                h3.title {
-                    font-size: 20px;
-                }
-           }
-           @media(max-width:320px){
-                h3.title {
-                    font-size: 17px;
-                    letter-spacing: 1px;
-                }
-           }
-        </style>
+	
 </head>
 <body>
 <!-- header -->
@@ -130,6 +65,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </section>
 <!-- //banner -->
+	
 <!--single page-->
   <section class="single page py-lg-4 py-md-3 py-sm-3 py-3" id="single-page">
     <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
@@ -167,9 +103,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
             <ul class="listing">
 		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>195 Грн.</span></li> 
-            <!-- </ul>
-            
-             <ul class="listing"> -->
 		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li> 
 	     </ul>
             <br>
@@ -199,84 +132,81 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		   </a>
 		</li>
 		<li class="telegram"><a href="tg://resolve?domain=Dovgal_YV"><span class="fa fa-paper-plane"></span></a></li>
-            </ul>
-           
+            </ul>    
            </p>
-<!------------$$$$$$----------->
+		
+		<!------------$$$$$$----------->
+		<div class="accordion mt-3 mb-3" id="accordionExample">
+		  <div class="card">
+		    <div class="card-header" id="headingOne">
+		      <h5 class="mb-0">
+			<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+			 <span class="fa fa-angle-right"></span>  Описание экскурсии...
+			</button>
+		      </h5>
+		    </div>
 
-<div class="accordion mt-3 mb-3" id="accordionExample">
-  <div class="card">
-    <div class="card-header" id="headingOne">
-      <h5 class="mb-0">
-        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-         <span class="fa fa-angle-right"></span>  Описание экскурсии...
-        </button>
-      </h5>
-    </div>
+		    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+		      <div class="card-body txt-alg-jf">
+			  <p>
+			<b>17:50</b> - сбор группы и после минутки 
+			  позитива пешая прогулка до места начала 
+			  экскурсии! </p>
+			<p><b>18:00 - 18:40</b> - экскурсия 
+			  по частной пивоварне. Мы увидим варочный 
+			  и бродильный цеха, почувствуем дух хмеля 
+			  и солода. Узнаем секреты ручной варки пива!</p>
+			<p><b>18:40-19:15</b> дегустация 6 видов
+			  вкуснейшего натурального пива. Сваренного 
+			  на уже полюбившейся пивоварне: травяное, 
+			  пшеничное, облепихово-медовое, синяя 
+			  борода (сухой стаут) и конечно фирменное
+			  светлое и темное пиво! Под закуску из 
+			  балыка из карпа, бастурмы, сыровяленой
+			  колбаски и вяленого мяса вы ощутите весь 
+			  аромат и вкус самого лучшего пива!</p><br/><hr/>
+			 <p>
+			  <i> *По окончании экскурсии и дегустации 
+			   все желающие смогут приобрести себе 
+			    понравившейся вид пива со скидкой 10%.</i>
+			 </p>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+		<!---------$$$$$$$--------->
 
-    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-      <div class="card-body txt-alg-jf">
-          <p>
-        <b>17:50</b> - сбор группы и после минутки 
-          позитива пешая прогулка до места начала 
-          экскурсии! </p>
-        <p><b>18:00 - 18:40</b> - экскурсия 
-          по частной пивоварне. Мы увидим варочный 
-          и бродильный цеха, почувствуем дух хмеля 
-          и солода. Узнаем секреты ручной варки пива!</p>
-        <p><b>18:40-19:15</b> дегустация 6 видов
-          вкуснейшего натурального пива. Сваренного 
-          на уже полюбившейся пивоварне: травяное, 
-          пшеничное, облепихово-медовое, синяя 
-          борода (сухой стаут) и конечно фирменное
-          светлое и темное пиво! Под закуску из 
-          балыка из карпа, бастурмы, сыровяленой
-          колбаски и вяленого мяса вы ощутите весь 
-          аромат и вкус самого лучшего пива!</p><br/><hr/>
-         <p>
-          <i> *По окончании экскурсии и дегустации 
-           все желающие смогут приобрести себе 
-            понравившейся вид пива со скидкой 10%.</i>
-         </p>
-      </div>
-    </div>
-  </div>
-</div>
+		<div class="alert alert-success">
+		<h5 class="alert-heading">В стоимость входит:</h5>
+		<ul class="list-group list-group-flush">
+		<li class="list-group-item list-group-item-success">
+		экскурсия по частной пивоварне;
+		</li>
+		<li class="list-group-item list-group-item-success " >
+		дегустация 6 видов пива и небольшая мясная и рыбная закуска;
+		</li>
+		<li class="list-group-item list-group-item-success " >
+		скидка 10% при покупке пива в пивоварне в день экскурсии;
+		</li>
+		<li class="list-group-item list-group-item-success " >
+		сопровождение от представителя Нового поворота;
+		</li>
+		<li class="list-group-item list-group-item-success " >
+		магнит от "Нового поворота".
+		</li>
+		</ul>
+		</div>
 
-<!---------$$$$$$$--------->
-
-
-<div class="alert alert-success">
-<h5 class="alert-heading">В стоимость входит:</h5>
-<ul class="list-group list-group-flush">
-<li class="list-group-item list-group-item-success">
-экскурсия по частной пивоварне;
-</li>
-<li class="list-group-item list-group-item-success " >
-дегустация 6 видов пива и небольшая мясная и рыбная закуска;
-</li>
-<li class="list-group-item list-group-item-success " >
-скидка 10% при покупке пива в пивоварне в день экскурсии;
-</li>
-<li class="list-group-item list-group-item-success " >
-сопровождение от представителя Нового поворота;
-</li>
-<li class="list-group-item list-group-item-success " >
-магнит от "Нового поворота".
-</li>
-</ul>
-</div>
-
-<div class="alert alert-danger">
-<h5 class="alert-heading">В стоимость не входит:</h5>
-<ul class="list-group list-group-flush">
-<li class="list-group-item list-group-item-danger " >
-питание и дополнительные расходы;
-</li>
-<li class="list-group-item list-group-item-danger " >
-проезд до места начала экскурсии и обратно ;
-</li>
-<ul>
+		<div class="alert alert-danger">
+		<h5 class="alert-heading">В стоимость не входит:</h5>
+		<ul class="list-group list-group-flush">
+		<li class="list-group-item list-group-item-danger " >
+		питание и дополнительные расходы;
+		</li>
+		<li class="list-group-item list-group-item-danger " >
+		проезд до места начала экскурсии и обратно ;
+		</li>
+		<ul>
              </div>
           </div>
         </div>
@@ -286,6 +216,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
   </section>
   <!--//single page-->
+	
 <!--footer -->
 <footer>
 <section class="footer footer_w3layouts_section_1its py-5">
