--- a/page-Beer.html
+++ b/page-Beer.html
@@ -123,7 +123,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     background: rgba(122,183,43,1) !important;"onmouseover="this.style.opacity='0.5';" onmouseout="this.style.opacity='1';">
     <img src="https://static.liqpay.ua/buttons/logo-small.png" name="btn_text"
       style="margin-right: 7px !important; vertical-align: middle !important;"/>
-    <span style="vertical-align:middle; !important">Оплатить 0 UAH</span>
+    <span style="vertical-align:middle; !important">Оплатить</span>
   </button>
 </form>
 <!-- liq pay -->
