--- a/page-Beer.html
+++ b/page-Beer.html
@@ -71,6 +71,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
       <div class="row">
 
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="#">Library</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Data</li>
+          </ol>
+        </nav>
+
         <div class="col-lg-4 main-title-text">
           <h3 class="title">Пиво</h3>
         </div>
