--- a/page-Beer.html
+++ b/page-Beer.html
@@ -73,9 +73,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Library</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Data</li>
+            <li class="breadcrumb-item"><a href="https://novi-povorot.pp.ua/index.html ">Главная</a></li>
+            <li class="breadcrumb-item"><a href="https://novi-povorot.pp.ua/packages.html">Туры</a></li>
+            <li class="breadcrumb-item active" aria-current="https://novi-povorot.pp.ua/page-Beer.html">Пиво</li>
           </ol>
         </nav>
 
