--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -70,6 +70,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <section class="single page py-lg-4 py-md-3 py-sm-3 py-3" id="single-page">
     <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
       <div class="row">
+   
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="https://novi-povorot.pp.ua/index.html ">Главная</a></li>
+            <li class="breadcrumb-item"><a href="https://novi-povorot.pp.ua/packages.html">Туры</a></li>
+            <li class="breadcrumb-item active" aria-current="https://novi-povorot.pp.ua/page-Poltava.html">Полтава</li>
+          </ol>
+        </nav>
 
         <div class="col-lg-4 main-title-text">
           <h3 class="title">Полтава</h3>
