--- a/packages.html
+++ b/packages.html
@@ -76,6 +76,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<p class="text mt-2 mb-5 text-center">Vestibulum tellus neque, sodales vel mauris at, rhoncus finibus augue. Vestibulum urna ligula, molestie at ante ut, finibus vulputate felis.</p>
 		<div class="row">
 			
+                       <nav aria-label="breadcrumb">
+                         <ol class="breadcrumb">
+                           <li class="breadcrumb-item"><a href="https://novi-povorot.pp.ua/index.html ">Главная</a></li>
+                           <!--<li class="breadcrumb-item"><a href="https://novi-povorot.pp.ua/packages.html">Туры</a></li>-->
+                           <li class="breadcrumb-item active" aria-current="#">Туры</li>
+                         </ol>
+                        </nav>
+
 			<div class="col-lg-3 col-sm-6 mb-5">
 				<div class="image-tour position-relative">
                                        <a href="https://novi-povorot.pp.ua/page-Beer.html">
