--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -75,7 +75,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="https://novi-povorot.pp.ua/index.html ">Главная</a></li>
             <li class="breadcrumb-item"><a href="https://novi-povorot.pp.ua/packages.html">Туры</a></li>
-            <li class="breadcrumb-item active" aria-current="https://novi-povorot.pp.ua/page-Limonariy.html">Лимонарий</li>
+            <li class="breadcrumb-item active" aria-current="page">Лимонарий</li>
           </ol>
         </nav>
 
