--- a/page-Turkey.html
+++ b/page-Turkey.html
@@ -74,7 +74,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="https://novi-povorot.pp.ua/index.html ">Главная</a></li>
             <li class="breadcrumb-item"><a href="https://novi-povorot.pp.ua/packages.html">Туры</a></li>
-            <li class="breadcrumb-item active" aria-current="https://novi-povorot.pp.ua/page-Turkey.html">Турция</li>
+            <li class="breadcrumb-item active" aria-current="page">Турция</li>
           </ol>
         </nav>
 
