--- a/packages.html
+++ b/packages.html
@@ -74,7 +74,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
      
 
 	<div class="container py-lg-4 py-sm-3">
-
+           <div class="row">
                <nav aria-label="breadcrumb">
                          <ol class="breadcrumb">
                            <li class="breadcrumb-item"><a href="https://novi-povorot.pp.ua/index.html ">Главная</a></li>
@@ -82,7 +82,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                            <li class="breadcrumb-item active" aria-current="#">Туры</li>
                          </ol>
                 </nav>
-
+          </div>
 		<h2 class="heading text-capitalize text-center"> Откройте Для Себя Наши Туры</h2>
 		<p class="text mt-2 mb-5 text-center">Vestibulum tellus neque, sodales vel mauris at, rhoncus finibus augue. Vestibulum urna ligula, molestie at ante ut, finibus vulputate felis.</p>
 		<div class="row">
