--- a/packages.html
+++ b/packages.html
@@ -73,7 +73,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <section class="packages pt-5">
      
 
-	<div class="container py-lg-4 py-sm-3">
+	<div class="container py-lg-5 py-md-4 py-sm-4 py-3">
            <div class="row">
                <nav aria-label="breadcrumb">
                          <ol class="breadcrumb">
