--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -75,6 +75,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		  </ol>
 	       </nav>
           </div>
+         </div>
 <!--single page-->
   <section class="single page py-lg-4 py-md-3 py-sm-3 py-3" id="single-page">
     <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
