--- a/packages.html
+++ b/packages.html
@@ -100,15 +100,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-lg-3 col-sm-6 mb-5">
 				<div class="image-tour position-relative">
-					<img src="images/p2.jpg" alt="" class="img-fluid" />
-					<p><span class="fa fa-tags"></span> <span>20$</span></p>
+					<a href="https://novi-povorot.pp.ua/page-LOL.html">
+					  <img src="images/lol-mini.jpg" alt="LOL" class="img-fluid" />
+                                       </a>
+					<p><span class="fa fa-tags"></span> <span>170грн.</span></p>
 				</div>
 				<div class="package-info">
-					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Лос-Анджелес, США.</h6>
-					<h5 class="my-2">Sodales vel mauris</h5>
-					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+					<h5 class="my-2">
+                                          <a href="https://novi-povorot.pp.ua/page-LOL.html">
+                                           Лол и Единорожки
+                                          </a>
+                                        </h5>
+					<p class="">Праздник в стиле Лол!</p>
 					<ul class="listing mt-3">
-						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li> 
 					</ul>
 				</div>
 			</div>
