--- a/packages.html
+++ b/packages.html
@@ -73,7 +73,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <section class="packages pt-5">
      
 		<h2 class="heading text-capitalize text-center"> Откройте Для Себя Наши Туры</h2>
-		<p class="text mt-2 mb-5 text-center">Vestibulum tellus neque, sodales vel mauris at, rhoncus finibus augue. Vestibulum urna ligula, molestie at ante ut, finibus vulputate felis.</p>
+		<p class="text mt-2 mb-5 text-center">Список туров от Нового Поворота.</p>
 		<div class="row">
 
 			<div class="col-lg-3 col-sm-6 mb-5">
