--- a/packages.html
+++ b/packages.html
@@ -215,7 +215,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</ul>
 				</div>
 			</div>
-		<!--</div>-->
+		</div>
 	</div>
 </section>
 <!-- tour packages -->
