--- a/page-LOL.html
+++ b/page-LOL.html
@@ -72,7 +72,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="row">
 
         <div class="col-lg-4 main-title-text">
-          <h3 class="title">Полтава</h3>
+          <h3 class="title">LOL</h3>
         </div>
         <div class="col-lg-8 blog-left-sub">
           <img src="images/Poltava-max.jpg" alt="news image" class="img-fluid">
