--- a/page-LOL.html
+++ b/page-LOL.html
@@ -72,7 +72,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="row">
 
         <div class="col-lg-4 main-title-text">
-          <h3 class="title">LOL</h3>
+          <h3 class="title"> ЛОЛ И ЕДИНОРОЖКИ </h3>
         </div>
         <div class="col-lg-8 blog-left-sub">
           <img src="images/Poltava-max.jpg" alt="news image" class="img-fluid">
@@ -85,17 +85,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </ul>
             </div>
             <h4 class="mb-3">
-              Лыжные покатухи и колоритный хутор в Полтаве
+              Праздник в стиле Лол!
             </h4>
             <p class="txt-alg-jf">
-              Колоритный Полтавский хутор с национальной едой и банькой, покатухи на лыжах, коньках и сноубордах в самом продвинутом горонолыжном комплексе с собственными снежными пушками. Экскурсия по Полтаве и просто душевный отдых! 
+              Лол и Единорожки на всех Ваших вещах? Вы не можете пройти мимо очередного яичка с игрушкой?
+            </p>
+            <p class="txt-alg-jf">
+              Ваш ребенок просит праздник, а до Дня рождения еще далеко? 
+              Именно для Вас мы приготовили Праздник в стиле Лол! Игры и танцы, роспись пряников с любимыми персонажами! 
+              Море веселья и отличного настроения!
             </p>
             <hr>
             <ul class="listing">
-		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>1700 Грн.</span></li> 
+		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>170 Грн.</span></li> 
 	   <!-- </ul>
              <ul class="listing">-->
-		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li> 
+		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li> 
 	     </ul>
             <br>
             <p>
