--- a/page-LOL.html
+++ b/page-LOL.html
@@ -75,7 +75,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <h3 class="title"> ЛОЛ И ЕДИНОРОЖКИ </h3>
         </div>
         <div class="col-lg-8 blog-left-sub">
-          <img src="images/Poltava-max.jpg" alt="news image" class="img-fluid">
+          <img src="images/lol-max.jpg" alt="news image" class="img-fluid">
           <div class="blog-two-two">
             <div class="blog-date-time mb-2">
               <ul class="listing mt-3">
