--- a/page-LOL.html
+++ b/page-LOL.html
@@ -152,71 +152,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="card-header" id="headingOne">
       <h5 class="mb-0">
         <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          <span class="fa fa-angle-right"></span>  Описание экскурсии: День 1
+          <span class="fa fa-angle-right"></span>  Описание
         </button>
       </h5>
     </div>
 
     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body txt-alg-jf">
-          <p><b>13 февраля, 8:00</b> выезд из Центра города. Полная информация после оплаты брони 50%.<br/> За 3 дня до тура
-<b>12:00-18:00 </b>  <u>Сорочин Яр</u> горнолыжный комплекс, который находится всего в <b>14 км </b> от Полтавы и совсем близко от Диканьки!
-Здесь есть  четыре трассы: </p>
-<ul>
-<li>
- <p>учебная для лыжников (новичков);</p>
-</li>
-<li>
- <p>для катания на тюбах;</p>
-</li>
-<li>
-<p> и две трассы протяженностью <b>300 м </b>каждая — для
- катания на лыжах и сноу — доске.</p>
-</li>
-</ul>
- <p>Состояние снежного покрова склонов поддерживается при помощи «снежных» пушек и укатывается ратраком, 
-а два бугельных подъемника обеспечивают минимальное время 
- стояния в очереди  для подъема на склон. <br>
-Если вам надоели лыжи или борд, можно покататься на коньках или санках, заняться сноутюбингом или просто  перекусить и выпить горячий глинтвейн.
-При желании — можно что-нибудь самим  приготовить! С пылу, с жару и с горячих углей! Грильзона находится на  открытой терассе, где есть столики,
- музыка и обзор на все Трассы и горки!<br>
-Или посетить местную пицерию — «Фанера» : молодежная атмосфера, необычный интерьер, вкусная  фирменная пицца под бокал вкусного разливного пива!
-Переезжаем на поселение в колоритную «Веселу садибу» (в 5 км от комплекса).</p>
-<p><b>18:15</b> <u>Гостевой дом «Весела садыба»</u> — потрясающий семейный отель, красиво оформленный под украинский  хутор.
-Высокий уровень сервиса, в домах чисто и тепло, номера —  в национальном стиле, большие, уютные, в которых есть все для комфортного проживания.
-Нас ждут гостепреимные хозяева и вкусный домашний  ужин! Такое  чувство, что приехал к любимой бабушке!<br>
-На этом вечерняя программа не заканчивается. Релакс в баньке будет отличным продолжением! А после можно будет завершить  вечер задушевными посиделками возле камина!
-          </p> 
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingTwo">
-      <h5 class="mb-0">
-        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          <span class="fa fa-angle-right"></span>  Описание экскурсии: День 2
-        </button>
-      </h5>
-    </div>
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-      <div class="card-body txt-alg-jf">
-       <p>  После того, как хорошенько выспимся и подкрепимся завтраком — можно будет совершить мини 
- экскурсию по территории усадьбы, устроить фотосессию, поваляться на сеновале, осмотреть коллекцию предметов  
-быта XIX - начала XX века и целое собрание  старинных вышивок.
-После <b>11 часов</b> выезжаем в Полтаву. 
-Обзорная  пешеходно автобусная  экскурсия по Полтаве:  Каштановая аллея, Круглая площадь, Корпусный сад, дом
- малороссийского губернатора, дом дворянского собрания, памятник погибшим украинским казакам, смотровая площадка 
-«Белая беседка», памятник Петру , Спасская церковь, Соборная площадь с колокольней Успенского собора, Иванова гора,
- памятник Полтавской галушке. Посещение Крестовоздвиженского монастыря.</p>
-<p>
-После обзорной экскурсии переезжаем в центр, где можно будет немного пройтись, выпить кофе, продегустировать местные галушки, зайти в супермаркет…<br/>
-Выезд в <b>17:00</b>. В Запорожье ориентировочно приезжаем в <b>21:00</b>. </p><br/><hr/>
-<p><i>*время начала и окончания экскурсии указаны предварительные, они могут быть изменены в зависимости от состава группы, без изменения указанной программы! </i></p>
           
+
+12:50 - сбор группы и после минутки позитива пешая прогулка до места начала праздника!
+13:00 -14:00 - Вас встретит настоящая Лол, мы станцуем зажигательные танцы, поиграем в самые веселые игры.
+Распишем яркими сьедобными красками 3 вида пряничков(лол, единорог, сердце). Угостимся сделаным пряничком на сладком столе с чаем!
+Все это и море позитива на Празднике Лол!
+*время указано предварительно и может быть незначительно изменено без ущерба программе! 
+
       </div>
     </div>
   </div>
-</div>
+  
 
 <!---------$$$$$$$--------->
 
