--- a/page-LOL.html
+++ b/page-LOL.html
@@ -159,23 +159,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body txt-alg-jf">
-          
-
-12:50 - сбор группы и после минутки позитива пешая прогулка до места начала праздника!
-13:00 -14:00 - Вас встретит настоящая Лол, мы станцуем зажигательные танцы, поиграем в самые веселые игры.
-Распишем яркими сьедобными красками 3 вида пряничков(лол, единорог, сердце). Угостимся сделаным пряничком на сладком столе с чаем!
-Все это и море позитива на Празднике Лол!
-*время указано предварительно и может быть незначительно изменено без ущерба программе! 
-
+          <p><b>12:50</b> - сбор группы и после минутки позитива пешая прогулка до места начала праздника!</p>
+          <p><b>13:00 -14:00</b> - Вас встретит настоящая Лол, мы станцуем зажигательные танцы, поиграем в самые веселые игры.
+             Распишем яркими сьедобными красками 3 вида пряничков(лол, единорог, сердце). Угостимся сделаным пряничком на сладком столе с чаем!
+          </p>
+          <p>
+            Все это и море позитива на Празднике Лол!
+           </p>
+           <br>
+           <hr>
+           <p>*время указано предварительно и может быть незначительно изменено без ущерба программе!</p>
       </div>
     </div>
   </div>
   
-
 <!---------$$$$$$$--------->
-
-
-
 
 <div class="alert alert-success">
 <h5 class="alert-heading">В стоимость входит:</h5>
