--- a/page-LOL.html
+++ b/page-LOL.html
@@ -172,6 +172,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       </div>
     </div>
   </div>
+</div>
   
 <!---------$$$$$$$--------->
 
