--- a/page-LOL.html
+++ b/page-LOL.html
@@ -168,7 +168,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
            </p>
            <br>
            <hr>
-           <p>*время указано предварительно и может быть незначительно изменено без ущерба программе!</p>
+           <p><i>*время указано предварительно и может быть незначительно изменено без ущерба программе!</i></p>
       </div>
     </div>
   </div>
