--- a/page-LOL.html
+++ b/page-LOL.html
@@ -180,22 +180,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <h5 class="alert-heading">В стоимость входит:</h5>
 <ul class="list-group list-group-flush">
 <li class="list-group-item list-group-item-success">
-транспортное обслуживание;
+Программа "Праздник в стиле Лол"(игры, танцы);
 </li>
 <li class="list-group-item list-group-item-success " >
-проживание — 1 ночь в усадьбе ;
+МК по росписи пряников + чай;
 </li>
 <li class="list-group-item list-group-item-success " >
-питание: ужин и завтрак (домашняя украинская кухня);
+3 пряника раписаных Вашим ребеноком +коробочка для их упаковки;
 </li>
 <li class="list-group-item list-group-item-success " >
-банный релакс (2 ч);
+встреча от представителя Нового поворота;
 </li>
 <li class="list-group-item list-group-item-success " >
-обзорная экскурсия в Полтаве (3 ч);
+прекрасное настроение;
 </li>
 <li class="list-group-item list-group-item-success " >
-сопровождение. 
+магнит от Нового поворота.
 </li>
 </ul>
 </div>
@@ -204,10 +204,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <h5 class="alert-heading">В стоимость не входит:</h5>
 <ul class="list-group list-group-flush">
 <li class="list-group-item list-group-item-danger " >
-прокат лыжного снаряжения и скипасс на подъемники ;
+доп расходы(покупка доп.сладостей);
 </li>
 <li class="list-group-item list-group-item-danger " >
-обеды в первый и во второй дни.
+проезд до места начала экскурсии и обратно.
 </li>
 <ul>
              </div>
