--- a/packages.html
+++ b/packages.html
@@ -109,7 +109,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
 					<h5 class="my-2">
                                           <a href="https://novi-povorot.pp.ua/page-LOL.html">
-                                           Лол и Единорожки
+                                           Лол
                                           </a>
                                         </h5>
 					<p class="">Праздник в стиле Лол!</p>
