--- a/packages.html
+++ b/packages.html
@@ -75,6 +75,98 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<h2 class="heading text-capitalize text-center"> Откройте Для Себя Наши Туры</h2>
 		<p class="text mt-2 mb-5 text-center">Список туров от Нового Поворота.</p>
 		<div class="row">
+    
+                        <div class="col-lg-3 col-sm-6 mb-5">
+				<div class="image-tour position-relative">
+                                       <a href="https://novi-povorot.pp.ua/page-Beer.html">
+					  <img src="images/beer-mini.jpg" alt="Пиво" class="img-fluid" />
+                                       </a>
+					<p><span class="fa fa-tags"></span> <span>195грн.</span></p>
+				</div>
+				<div class="package-info">
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+					<h5 class="my-2">
+                                          <a href="https://novi-povorot.pp.ua/page-Beer.html">
+                                           Натуральное пиво
+                                          </a>
+                                         </h5>
+					<p class="">
+                                          Экскурсия и дегустация в частную пивоварню
+                                        </p>
+					<ul class="listing mt-3">
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
+					</ul>
+				</div>
+			</div>
+
+                        <div class="col-lg-3 col-sm-6 mb-5">
+				<div class="image-tour position-relative">
+                                       <a href="https://novi-povorot.pp.ua/page-Beer.html">
+					  <img src="images/beer-mini.jpg" alt="Пиво" class="img-fluid" />
+                                       </a>
+					<p><span class="fa fa-tags"></span> <span>195грн.</span></p>
+				</div>
+				<div class="package-info">
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+					<h5 class="my-2">
+                                          <a href="https://novi-povorot.pp.ua/page-Beer.html">
+                                           Натуральное пиво
+                                          </a>
+                                         </h5>
+					<p class="">
+                                          Экскурсия и дегустация в частную пивоварню
+                                        </p>
+					<ul class="listing mt-3">
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
+					</ul>
+				</div>
+			</div>
+
+                        <div class="col-lg-3 col-sm-6 mb-5">
+				<div class="image-tour position-relative">
+                                       <a href="https://novi-povorot.pp.ua/page-Beer.html">
+					  <img src="images/beer-mini.jpg" alt="Пиво" class="img-fluid" />
+                                       </a>
+					<p><span class="fa fa-tags"></span> <span>195грн.</span></p>
+				</div>
+				<div class="package-info">
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+					<h5 class="my-2">
+                                          <a href="https://novi-povorot.pp.ua/page-Beer.html">
+                                           Натуральное пиво
+                                          </a>
+                                         </h5>
+					<p class="">
+                                          Экскурсия и дегустация в частную пивоварню
+                                        </p>
+					<ul class="listing mt-3">
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
+					</ul>
+				</div>
+			</div>
+
+                        <div class="col-lg-3 col-sm-6 mb-5">
+				<div class="image-tour position-relative">
+                                       <a href="https://novi-povorot.pp.ua/page-Beer.html">
+					  <img src="images/beer-mini.jpg" alt="Пиво" class="img-fluid" />
+                                       </a>
+					<p><span class="fa fa-tags"></span> <span>195грн.</span></p>
+				</div>
+				<div class="package-info">
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+					<h5 class="my-2">
+                                          <a href="https://novi-povorot.pp.ua/page-Beer.html">
+                                           Натуральное пиво
+                                          </a>
+                                         </h5>
+					<p class="">
+                                          Экскурсия и дегустация в частную пивоварню
+                                        </p>
+					<ul class="listing mt-3">
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
+					</ul>
+				</div>
+			</div>
 
 			<div class="col-lg-3 col-sm-6 mb-5">
 				<div class="image-tour position-relative">
