--- a/packages.html
+++ b/packages.html
@@ -293,7 +293,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-3 col-sm-6 mb-5">
 				<div class="image-tour position-relative">
                                       <a href="https://novi-povorot.pp.ua/page-Turkey.html">
-					<img src="images/Turkey-mini.jpg" alt="Лимонарий" class="img-fluid" />
+					<img src="images/Turkey-mini.jpg" alt="Турция" class="img-fluid" />
                                       </a>
 					<p><span class="fa fa-tags"></span> <span>190$</span></p>
 				</div>
