--- a/packages.html
+++ b/packages.html
@@ -67,7 +67,106 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </section>
 <!-- //banner -->
-
+<!-- ==================================== -->
+<!-- tour packages Туры-->
+<section class="packages py-5">
+	<div class="container py-lg-4 py-sm-3">
+		<h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Откройте Для Себя Наши Туры</h3>
+		<p class="text mt-2 mb-5 text-center">Vestibulum tellus neque, sodales vel mauris at, rhoncus finibus augue. Vestibulum urna ligula, molestie at ante ut, finibus vulputate felis.</p>
+		<div class="row">
+			<!--  Пиво -->
+			<div class="col-lg-3 col-sm-6">
+				<div class="image-tour position-relative">
+                                      <a href="https://novi-povorot.pp.ua/page-Beer.html">
+					<img src="images/beer-mini.jpg" alt="Пиво" class="img-fluid" />
+                                       </a>
+					<p><span class="fa fa-tags"></span> <span>195грн.</span></p>
+				</div>
+				<div class="package-info">
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+					<h5 class="my-2">
+                                         <a href="https://novi-povorot.pp.ua/page-Beer.html">
+                                          Натуральное пиво
+                                          </a>
+                                         </h5>
+					<p class="">
+                                          Экскурсия и дегустация в частной пивоварне
+                                        </p>
+					<ul class="listing mt-3">
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li> 
+					</ul>
+				</div>
+			</div>
+			<!--  //Пиво -->
+			
+			<!--  Турция -->
+			<div class="col-lg-3 col-sm-6">
+				<div class="image-tour position-relative">
+                                        <a href="https://novi-povorot.pp.ua/page-Turkey.html">
+					 <img src="images/Turkey-mini.jpg" alt="" class="img-fluid" />
+                                        </a>
+					<p><span class="fa fa-tags"></span> <span>190$</span></p>
+				</div>
+				<div class="package-info">
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Турция</h6>
+					<h5 class="my-2">
+                                         <a href="https://novi-povorot.pp.ua/page-Turkey.html">   Походы по Турции</a></h5>
+					<p class="">Расписание походов по Турции...</p>
+					<ul class="listing mt-3">
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>8 Дней</span></li> 
+					</ul>
+				</div>
+			</div>
+			<!--  //Лос-Анджелес, США.  -->
+			
+			<!--  Полтава | экскурсия в Полтаву -->
+			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
+				<div class="image-tour position-relative">
+                                       <a href="https://novi-povorot.pp.ua/page-Poltava.html">
+					   <img src="images/Poltava-mini.jpg" alt="" class="img-fluid" />
+					</a>
+                                       <p><span class="fa fa-tags"></span> <span>1700грн.</span></p>
+				</div>
+				<div class="package-info">
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Полтава, Украина.</h6>
+					<h5 class="my-2"><a href="https://novi-povorot.pp.ua/page-Poltava.html">Полтава</a></h5>
+					<p class="">Лыжные покатухи и колоритный хутор с Новым поворотом </p>
+					<ul class="listing mt-3">
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li> 
+					</ul>
+				</div>
+			</div>
+			<!--  //Полтава  -->
+			
+			<!--  Лимонарий Запорожье | экскурсия в Лимонный сад с Новым поворотом  -->
+			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
+				<div class="image-tour position-relative">
+                                      <a href="https://novi-povorot.pp.ua/page-Limonariy.html">
+					  <img src="images/2021 Лим 2550 на 1700.jpg" alt="Лимонарий" class="img-fluid" />
+                                      </a>
+					<p><span class="fa fa-tags"></span> <span>230грн.</span></p>
+				</div>
+				<div class="package-info">
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+					<h5 class="my-2">
+                                          <a href="https://novi-povorot.pp.ua/page-Limonariy.html">
+                                            Лимонарий
+                                           </a>
+                                         </h5>
+					<p class="">Экскурсия в Лимонный сад с Новым поворотом </p>
+					<ul class="listing mt-3">
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li> 
+					</ul>
+				</div>
+			</div>
+			<!--  //Лимонарий Запорожье | экскурсия в Лимонный сад с Новым поворотом  -->
+		</div>
+		<div class="view-package text-center mt-4">
+			<a href="packages.html">Просмотреть все туры</a>
+		</div>
+	</div>
+</section>
+<!-- tour packages -->
 
 <!-- tour packages -->
 <section class="packages pt-5">
@@ -319,9 +418,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </section>
 <!-- tour packages -->
-
+<!-- ==================================== -->
 <!-- destinations | Популярные Направления-->
-<section class="destinations py-5" id="destinations">
+<!--<section class="destinations py-5" id="destinations">
 	<div class="container py-xl-5 py-lg-3">
 		<h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Популярные Направления</h3>
 		<p class="text mt-2 mb-5 text-center">Vestibulum tellus neque, sodales vel mauris at, rhoncus finibus augue. Vestibulum urna ligula, molestie at ante ut, finibus vulputate felis.</p>
@@ -419,6 +518,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 </section>
+-->
 <!-- destinations | Популярные Направления -->
 
 <!--footer -->
