--- a/packages.html
+++ b/packages.html
@@ -169,6 +169,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- tour packages -->
 
 <!-- tour packages -->
+<!--
 <section class="packages pt-5">
      
 		<h2 class="heading text-capitalize text-center"> Откройте Для Себя Наши Туры</h2>
@@ -326,7 +327,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			
-			<!--  Лимонарий Запорожье | экскурсия в Лимонный сад с Новым поворотом  -->		
+					
 			<div class="col-lg-3 col-sm-6 mb-5">
 				<div class="image-tour position-relative">
                                      <a href="https://novi-povorot.pp.ua/page-Limonariy.html">
@@ -347,7 +348,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</ul>
 				</div>
 			</div>
-			<!--  //Лимонарий Запорожье | экскурсия в Лимонный сад с Новым поворотом  -->
+			
 			
 			<div class="col-lg-3 col-sm-6 mb-5">
 				<div class="image-tour position-relative">
@@ -416,11 +417,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		
 		</div>
 	</div>
-</section>
+</section>-->
 <!-- tour packages -->
+	
 <!-- ==================================== -->
+	
 <!-- destinations | Популярные Направления-->
-<!--<section class="destinations py-5" id="destinations">
+<section class="destinations py-5" id="destinations">
 	<div class="container py-xl-5 py-lg-3">
 		<h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Популярные Направления</h3>
 		<p class="text mt-2 mb-5 text-center">Vestibulum tellus neque, sodales vel mauris at, rhoncus finibus augue. Vestibulum urna ligula, molestie at ante ut, finibus vulputate felis.</p>
@@ -518,7 +521,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 </section>
--->
 <!-- destinations | Популярные Направления -->
 
 <!--footer -->
