--- a/page-Turkey.html
+++ b/page-Turkey.html
@@ -94,22 +94,24 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </p>
           <p>
              Бронирование билетов осуществляется заранеe: </p>
-          <div class="page-booking-btn mt-1 mb-1">
+          <div class="page-booking-btn m-1 m-1">
               <button type="button" class="btn btn-outline-primary"> <a href="https://novi-povorot.pp.ua/booking.html">Забронировать</a> </button>
+		  
+		<!-- liq pay -->
+	<form method="POST" accept-charset="utf-8" action="https://www.liqpay.ua/api/3/checkout">
+	  <input type="hidden" name="data" value="eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJhbW91bnQiOiIwIiwiY3VycmVuY3kiOiJVQUgiLCJkZXNjcmlwdGlvbiI6ItCt0LrRgdC60YPRgNGB0LjRjyIsInB1YmxpY19rZXkiOiJpNzQ2NTQ4MzU1NTIiLCJsYW5ndWFnZSI6InJ1In0=" />
+	  <input type="hidden" name="signature" value="4+42EF/w3QRoK5hOJqe+N3dSS/0=" />
+	  <button style="border: none !important; display:inline-block !important;text-align: center !important;padding: 7px 20px !important;
+	    color: #fff !important; font-size:16px !important; font-weight: 600 !important; font-family:OpenSans, sans-serif; cursor: pointer !important; border-radius: 2px !important;
+	    background: rgba(122,183,43,1) !important;"onmouseover="this.style.opacity='0.5';" onmouseout="this.style.opacity='1';">
+	    <img src="https://static.liqpay.ua/buttons/logo-small.png" name="btn_text"
+	      style="margin-right: 7px !important; vertical-align: middle !important;"/>
+	    <span style="vertical-align:middle; !important">Оплатить</span>
+	  </button>
+	</form>
+	<!-- liq pay -->  
           </div>
-          <!-- liq pay -->
-<form method="POST" accept-charset="utf-8" action="https://www.liqpay.ua/api/3/checkout">
-  <input type="hidden" name="data" value="eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJhbW91bnQiOiIwIiwiY3VycmVuY3kiOiJVQUgiLCJkZXNjcmlwdGlvbiI6ItCt0LrRgdC60YPRgNGB0LjRjyIsInB1YmxpY19rZXkiOiJpNzQ2NTQ4MzU1NTIiLCJsYW5ndWFnZSI6InJ1In0=" />
-  <input type="hidden" name="signature" value="4+42EF/w3QRoK5hOJqe+N3dSS/0=" />
-  <button style="border: none !important; display:inline-block !important;text-align: center !important;padding: 7px 20px !important;
-    color: #fff !important; font-size:16px !important; font-weight: 600 !important; font-family:OpenSans, sans-serif; cursor: pointer !important; border-radius: 2px !important;
-    background: rgba(122,183,43,1) !important;"onmouseover="this.style.opacity='0.5';" onmouseout="this.style.opacity='1';">
-    <img src="https://static.liqpay.ua/buttons/logo-small.png" name="btn_text"
-      style="margin-right: 7px !important; vertical-align: middle !important;"/>
-    <span style="vertical-align:middle; !important">Оплатить</span>
-  </button>
-</form>
-<!-- liq pay -->
+          
           <p>
              Присоединяйтесь к сообществу в социальных сетях:
   	  </p>
