--- a/page-Turkey.html
+++ b/page-Turkey.html
@@ -94,8 +94,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </p>
           <p>
              Бронирование билетов осуществляется заранеe: </p>
-          <div class="page-booking-btn m-1 m-1">
-              <button type="button" class="btn btn-outline-primary"> <a href="https://novi-povorot.pp.ua/booking.html">Забронировать</a> </button>
+          <div class="page-booking-btn ml-1 mt-1 mb-1 row">
+              <button type="button" class="btn btn-outline-primary mr-3"> <a href="https://novi-povorot.pp.ua/booking.html">Забронировать</a> </button>
 		  
 		<!-- liq pay -->
 	<form method="POST" accept-charset="utf-8" action="https://www.liqpay.ua/api/3/checkout">
