--- a/packages.html
+++ b/packages.html
@@ -93,7 +93,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				Vestibulum urna ligula, molestie at ante ut, finibus vulputate felis.</p>
 			<div class="row">
 				<!--  Пиво -->
-				<div class="col-lg-3 col-sm-6">
+				<div class="col-lg-3 col-sm-6 mb-5">
 					<div class="image-tour position-relative">
 						<a href="https://novi-povorot.pp.ua/page-Beer.html">
 							<img src="images/beer-mini.jpg" alt="Пиво" class="img-fluid" />
@@ -118,7 +118,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!--  //Пиво -->
 
 				<!--  Турция -->
-				<div class="col-lg-3 col-sm-6">
+				<div class="col-lg-3 col-sm-6 mb-5">
 					<div class="image-tour position-relative">
 						<a href="https://novi-povorot.pp.ua/page-Turkey.html">
 							<img src="images/Turkey-mini.jpg" alt="" class="img-fluid" />
@@ -139,7 +139,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!--  //Лос-Анджелес, США.  -->
 
 				<!--  Полтава | экскурсия в Полтаву -->
-				<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
+				<div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
 					<div class="image-tour position-relative">
 						<a href="https://novi-povorot.pp.ua/page-Poltava.html">
 							<img src="images/Poltava-mini.jpg" alt="" class="img-fluid" />
@@ -158,7 +158,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!--  //Полтава  -->
 
 				<!--  Лимонарий Запорожье | экскурсия в Лимонный сад с Новым поворотом  -->
-				<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
+				<div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
 					<div class="image-tour position-relative">
 						<a href="https://novi-povorot.pp.ua/page-Limonariy.html">
 							<img src="images/2021 Лим 2550 на 1700.jpg" alt="Лимонарий" class="img-fluid" />
