--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Турция</h6>
 					<h5 class="my-2">
                                          <a href="https://novi-povorot.pp.ua/page-Turkey.html">   Походы по Турции</a></h5>
-					<p class="">Расписание походов по Турции...</p>
+					<p class="">Расписание походов по Турции...</p><br/>
 					<ul class="listing mt-3">
 						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>8 Дней</span></li> 
 					</ul>
