--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -95,7 +95,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               города Запорожья. Мы посетим удивительное место, узнаем
               историю семьи которая растит эти чудо-лимоны, сделаем 
               фото среди лимонных ветвей. А чтоб не грустить дома
-              без вкусностей, каждый получит <span class="badge badge-warning font-weight-bold text-center">1 кг</span> вкуснейших
+              без вкусностей, каждый получит <strong class="badge badge-warning font-weight-bold text-center">1 кг</strong> вкуснейших
               лимонов с собой!
             </p>
             <hr>
