--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -100,7 +100,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </p>
             <hr>
              <div class="alert alert-warning mt-3 ">
-                <span class="fa fa-exclamation-triangle"></span> Внимание!<br/>
+                <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br/>
 	        <span class="txt-alg-jf">В стоимость входит 1 кг лимонов с собой. 
                   180 грн 0-12 лет (в стоимость входит 0.5 кг 
                    лимонов с собой), цена для семей от 2 человек
