--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -99,7 +99,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               лимонов с собой!
             </p>
             <hr>
+       <!-- Alert warning -->
              <div class="alert alert-warning mt-3 ">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
                 <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br/>
 	        <span class="txt-alg-jf">В стоимость входит 1 кг лимонов с собой. 
                   180 грн 0-12 лет (в стоимость входит 0.5 кг 
