--- a/page-Beer.html
+++ b/page-Beer.html
@@ -98,7 +98,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </p>
             <hr>
             <div class="alert alert-danger mt-3">
-	      <span class="fa fa-exclamation-triangle"></span> Внимание!<br/> <span class="badge badge-danger"><b>18+</b></span> Количество мест ограничено! 
+              <button type="button" class="close" data-dismiss="alert">&times;</button>
+	      <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br/> <span class="badge badge-danger"><b>18+</b></span> Количество мест ограничено! 
                 Запись уже открыта!
             </div>
             <ul class="listing">
