--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -71,7 +71,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="row">
 
         <div class="col-lg-4 main-title-text">
-          <h3 class="title">Лимонарий</h3>
+          <h3 class="title">Хортица</h3>
         </div>
         <div class="col-lg-8 blog-left-sub">
           <img src="images/2021 Лим 2550 на 2910.jpg" alt="news image" class="img-fluid">
