--- a/packages.html
+++ b/packages.html
@@ -136,9 +136,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</ul>
 					</div>
 				</div>
-				<!--  //Лос-Анджелес, США.  -->
+				<!--  //Турция  -->
 
-				<!--  Полтава | экскурсия в Полтаву -->
+				<!--  Полтава -->
 				<div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
 					<div class="image-tour position-relative">
 						<a href="https://novi-povorot.pp.ua/page-Poltava.html">
@@ -203,10 +203,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<!--  //ЛОЛ Запорожье | ЛОЛ с Новым поворотом  -->
 
-				<!--  ЛОЛ Запорожье | ЛОЛ с Новым поворотом  -->
+				<!--  Хортица -->
 				<div class="col-lg-3 col-sm-6 mb-5">
 					<div class="image-tour position-relative">
-						<a href="https://novi-povorot.pp.ua/page-LOL.html">
+						<a href="https://novi-povorot.pp.ua/page-Hortica.html">
 							<img src="images/lol-mini.jpg" alt="LOL" class="img-fluid" />
 						</a>
 						<p><span class="fa fa-tags"></span> <span>170грн.</span></p>
@@ -214,7 +214,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="package-info">
 						<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
 						<h5 class="my-2">
-							<a href="https://novi-povorot.pp.ua/page-LOL.html">
+							<a href="https://novi-povorot.pp.ua/page-Hortica.html">
 								Лол
 							</a>
 						</h5>
@@ -224,7 +224,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</ul>
 					</div>
 				</div>
-				<!--  //ЛОЛ Запорожье | ЛОЛ с Новым поворотом  -->
+				<!--  //Хортица  -->
 
 				<!--  ЛОЛ Запорожье | ЛОЛ с Новым поворотом  -->
 				<div class="col-lg-3 col-sm-6 mb-5">
