--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<title>Лимонарий | Новый поворот</title>
+<title>Хортица | Новый поворот</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 <meta name="keywords" content="Grand Tour Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -74,7 +74,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <h3 class="title">Хортица</h3>
         </div>
         <div class="col-lg-8 blog-left-sub">
-          <img src="images/2021 Лим 2550 на 2910.jpg" alt="news image" class="img-fluid">
+          <img src="images/hortica-max.jpg" alt="news image" class="img-fluid">
           <div class="blog-two-two">
             <div class="blog-date-time mb-2">
               <ul class="listing mt-3">
